[gd_scene load_steps=2 format=3 uid="uid://cj5b2mfsvqaos"]

[ext_resource type="Script" uid="uid://bux5vlfei1vrb" path="res://scripts/SewMinigame.gd" id="1"]

[node name="SewOSU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -622.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
metadata/_edit_horizontal_guides_ = [194.0]
metadata/_edit_vertical_guides_ = [270.0]

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="TargetRing" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -17.0
offset_right = 26.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(21, 21)

[node name="RingShape" type="ColorRect" parent="TargetRing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0, 0.8)

[node name="CollapsingCircle" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -72.0
offset_right = 80.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 75)

[node name="CircleShape" type="ColorRect" parent="CollapsingCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.8, 1, 0.6)

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 122.0
offset_top = 322.0
offset_right = 242.0
offset_bottom = 356.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "0/8"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Combo: 0"
horizontal_alignment = 1
